--- a/src/components/MenuItem/menuItem.css
+++ b/src/components/MenuItem/menuItem.css
@@ -17,7 +17,7 @@
 }
 
 .menu-item__price {
-	-webkit-text-stroke: 1px var(--color-blue-dark);
 	position: absolute;
 	right: 0px;
+	top: 1px;
 }
